src/components/ProfilePage/ProfileContactSides/styles.module.css
ul.location-wrapper {
  margin-top: var(--spacing-16);
  display: flex;
  flex-direction: row;
  gap: var(--spacing-16);
}

ul.contact-wrapper {
  margin-top: var(--spacing-16);
  display: flex;
  flex-direction: column;
  gap: var(--spacing-16);
}


ul.location-wrapper li,
ul.contact-wrapper li {
  display: flex;
  align-items: center;
  gap: var(--spacing-8);

  /* font-family: 'Poppins'; */
  /* font-style: normal; */
  font-weight: 400;
  font-size: 14px;
  line-height: 20px;
  color: #939ca3;
}
ul.location-wrapper svg,
ul.contact-wrapper svg {
  max-width: 1.5rem;
  width: 100%;
  aspect-ratio: 1/1;
}
.ul.location-wrapper .text {
  margin-left: 8px;
  font-weight: 500;
  font-size: 14px;
  line-height: 20px;
  color: #939ca3;
}
.hide {
  display: none !important;
}
.show {
  display: block !important;
}

.list-item span{
  width: 292px;
  max-width: 100%;
  overflow: hidden;
  color: #08090A;
}

.error{
  border: 1px solid #C0504D !important;
}

@media screen and (max-width: 1100px) {
  .contact-wrapper{
    display: none !important;
  }
  .display-mobile-flex{
    display: flex !important;
  }
}

